@@ -319,9 +319,9 @@ bool Ipv4Codec::decode(const RawData& raw, CodecData& codec, DecodeData& snort)
 
     /* if this packet isn't a fragment
      * or if it is, its a UDP packet and offset is 0 */
-    if(!(snort.decode_flags & DECODE_FRAG) ||
-        ((frag_off == 0) &&
-         (iph->get_proto() == IPPROTO_UDP)))
+    if(!(snort.decode_flags & DECODE_FRAG) /*||
+        ((frag_off == 0) &&  // FIXIT-M this forces flow to udp instead of ip
+         (iph->get_proto() == IPPROTO_UDP))*/)
     {
         if (iph->get_proto() >= MIN_UNASSIGNED_IP_PROTO)
             codec_events::decoder_event(codec, DECODE_IP_UNASSIGNED_PROTO);
